# fopy

./: .gitignore  AGENTS.md  README.md  mkdocs.yml  pyproject.toml
.cursor/rules/: docs-autogen.mdc  docstrings-manual.mdc  static-analysis.mdc  type-annotations.mdc
.github/workflows/: ci.yml
docs/: index.md
docs/api/: builders.md  draw.md  finite.md  fragments.md  index.md  solvers.md  universal.md  variety.md
docs/design/: 001-hit-definability.md  002-hasse-layout.md  003-builders.md  004-explain-definability.md  004-substitution.md  005-forces.md  006-equality.md  007-complexity-bounds.md  008-many-sorted.md  009-fragments.md  010-fo-definability-k-types.md
scripts/: build_docs.sh  demo_explain.py  demo_fo.py
src/fopy/: __init__.py  api.py  bridge.py  formulas.py  normal_forms.py  semantics.py  signature.py  simplify.py  sorts.py  structures.py  symbols.py  terms.py  terms_normalize.py  theories.py  theory_free_algebra.py  transform.py
src/fopy/builders/: __init__.py  catalog.py  domain.py  fluent.py  from_algebra.py  from_poset.py
src/fopy/core/: __init__.py  basic.py  hashcons.py  visitor.py
src/fopy/draw/: __init__.py  __main__.py  examples.py  forces.py  graphviz_export.py  hasse.py  html_export.py  layout3d.py  mermaid_export.py  metrics.py  poset.py  project.py  ranking.py  render.py  tikz_export.py
src/fopy/finite/: __init__.py  algebra.py  certificates.py  definability.py  eval_cache.py  eval_fast.py  explain.py  formula_search.py  hit.py  ktypes.py  model_checking.py  models.py  open_formulas.py  open_parse.py  preprocessing.py  products.py  relops.py  relops_bitset.py  symbolic_model_checking.py  synthesis.py  synthesis_cegis.py  synthesis_smt.py
src/fopy/finite/fragments/: __init__.py  _partition.py  _witness.py  ep_ktypes.py  fo_ktypes.py  horn_ktypes.py  pp_ktypes.py
src/fopy/parse/: __init__.py  formula.py  model.py
src/fopy/plugins/: __init__.py
src/fopy/printing/: __init__.py  latex.py  open.py  pretty.py  smtlib.py  str.py  tptp.py
src/fopy/solvers/: __init__.py  z3_backend.py  z3_formula.py
src/fopy/universal/: __init__.py  clone.py  draw.py  lattice_views.py  term_identities.py
tests/: conftest.py  helpers_finite.py  helpers_models.py  test_algebra_extensive.py  test_bridge.py  test_bridge_full.py  test_builders.py  test_builders_equiv.py  test_builders_full.py  test_certificate_light.py  test_certificates_extensive.py  test_core.py  test_core_basic.py  test_coverage_bump.py  test_coverage_extra.py  test_coverage_gaps.py  test_definability_batch.py  test_definability_extensive.py  test_definability_fragments.py  test_draw.py  test_draw_catalog.py  test_draw_extra.py  test_draw_metrics.py  test_explain_definability.py  test_explain_extensive.py  test_explain_golden.py  test_export_formats_extensive.py  test_finite.py  test_finite_explain.py  test_finite_extra.py  test_finite_open_formulas.py  test_finite_regression.py  test_finite_relops.py  test_fixture_batch_extensive.py  test_formulas.py  test_formulas_extra.py  test_golden.py  test_hit_extra.py  test_hypothesis.py  test_hypothesis_extended.py  (+40 more)
tests/fixtures/: rel_0arity.model  target_vacio.model  universo_un_elemento.model
tests/fixtures/expected/explain/: minimal_definable.txt  retrombo_nodef.txt
tests/fixtures/models/: estres_paralelo.model  formula_con_igual.model  formula_vars_repetidas.model  gigante.model  minimal.model  modelo_solo_target.model
todo/: 01-vision-y-killer-feature.md  02-nucleo-confiable-y-certificados-negativos.md  03-publicabilidad-e-imprescindibles.md  04-tercera-capa-y-niveles.md  05-capas-transversales-resto.md  06-plataforma-meta-investigacion.md  07-teoria-modelos-finitos-ebbinghaus-flum.md  08-herramientas-fmt-tecnicas.md  09-complejidad-descriptiva-profunda.md  10-temas-frontera-fmt.md  11-teoria-modelos-clasica.md  README.md
