[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fopy"
version = "0.1.0"
description = "Symbolic first-order logic for Python"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "Pablo Ventura" }]
keywords = ["logic", "first-order", "model-theory", "lattice"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = []

[project.optional-dependencies]
draw = ["numpy>=1.24", "matplotlib>=3.7"]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "hypothesis>=6.92",
    "ruff>=0.1",
]
all = ["fopy[draw,dev]"]

[project.scripts]
fopy-draw = "fopy.draw.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "draw: tests requiring matplotlib",
    "finite: tests for fopy.finite",
    "slow: expensive tests",
]
addopts = "--strict-markers --doctest-modules"
pythonpath = ["src"]

[tool.coverage.run]
source = ["fopy"]
omit = [
    "*/draw/__main__.py",
    "*/draw/examples.py",
    "*/draw/poset.py",
    "*/draw/hasse.py",
    "*/finite/hit.py",
]

[tool.coverage.report]
fail_under = 85
show_missing = true

[tool.ruff]
line-length = 100
target-version = "py310"
